--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Gradle
       run: gradle build
 
-    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
+    # The USERNAME and TOKEN need to correspond to the credentials environment variables used in the
     # the publishing section of your build.gradle
     - name: Publish to GitHub Packages
       run: gradle publish
